# fmerge

./: #.html  .neomake.yaml  .rusty-hook.toml  404.html  Cargo.toml  index.html  print.html  reference.html  searchindex.js  searchindex.json
.github/workflows/: release.yml  wiki.yml
adrs/: 1-usage-of-adrs.html  2-usage-of-keywords.html  3-versioning.html  4-experimental-flag.html  5-feature-flags.html
docs/: README.md
docs/wiki/: book.toml
docs/wiki/src/adrs/: 3-versioning.md  4-experimental-flag.md  5-feature-flags.md
src/: args.rs  error.rs  main.rs  reference.rs
test/: a.md
test/md/: a.md
test/md/subf/: b.md
test/subf/: b.md
test/yaml/: a.yaml  a.yaml.part  b.yaml.part  c.yaml.part
