[package]
name = "fmerge"
version = "0.0.0"
authors = ["Alexander Weber <aw@voidpointergroup.com>"]
edition = "2018"
license = "MIT"
description = "Merging files recursively."
homepage = "https://replicadse.github.io/fmerge"
repository = "https://github.com/replicadse/fmerge"
keywords = ["cli"]
categories = ["command-line-utilities"]
readme = "docs/README.md"

[features]
default = []

[profile.release]
lto = true

[dependencies]
clap = "^4.1.8"
clap_complete = "4.1.4"
clap_mangen = "0.2.9"
clap-markdown = "0.1.3"
async-trait = "^0.1"
tokio = { version = "1.26.0", features = ["rt", "rt-multi-thread", "macros" ] }
thiserror = "^1.0"
fancy-regex = "0.11.0"
anyhow = "1.0.72"

